@ggoular @juliofarah solve #4 - vertical align table's text

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -350,6 +350,7 @@ dt {
 
 .table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
 	border: none;
+  vertical-align: middle;
 }
 
 .has-error input {
